# rsspec

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/rsspec/: Cargo.toml
crates/rsspec-macros/: Cargo.toml
crates/rsspec-macros/src/: lib.rs
crates/rsspec-macros/tests/: decorators_and_hooks.rs
crates/rsspec/src/: context.rs  lib.rs  macros.rs  ordered.rs  runner.rs  table.rs  trials.rs
crates/rsspec/tests/: async_suite_runtime_test.rs  async_test.rs  decorators_test.rs  describe_test.rs  fixture_collision_test.rs  hook_fixture_param_test.rs  hooks_test.rs  lifecycle_profiling.rs  macros_async_test.rs  macros_test.rs  parallel_test.rs  runtime_semantics_test.rs  seam_smoke.rs  utilities_test.rs
crates/rsspec_macros/: Cargo.toml
crates/rsspec_macros/src/: lib.rs
crates/rsspec_macros/tests/: async_hooks.rs  explicit_forms.rs  it_body_forms.rs  mvp.rs  scoping.rs  ui.rs
crates/rsspec_macros/tests/ui/: async_it_non_clone_fixture.rs  async_it_non_clone_fixture.stderr  same_type_in_scope.rs  same_type_in_scope.stderr
