[workspace]
resolver = "2"
members = ["crates/rsspec"]

[workspace.package]
version = "0.6.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nexode-Consulting/rsspec"
keywords = ["BDD", "testing", "spec", "ginkgo", "rspec"]
categories = ["development-tools::testing"]
