[workspace]
resolver = "2"
members = ["crates/rsspec", "crates/rsspec_macros"]

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Nexode-Consulting/rsspec"
keywords = ["BDD", "testing", "spec", "ginkgo", "rspec"]
categories = ["development-tools::testing"]
