[package]
name = "rsspec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A Ginkgo/RSpec-inspired BDD testing framework for Rust."
readme = "../../README.md"

[features]
default = []
googletest = ["dep:googletest"]
tokio = ["dep:tokio"]
# Run distinct top-level describe/it/ordered subtrees on worker threads.
# Adds a `Send` bound to all test/hook closures (see MaybeSend in lib.rs).
parallel = []

[dependencies]
googletest = { version = "0.14", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }

[[test]]
name = "describe_test"
harness = false

[[test]]
name = "hooks_test"
harness = false

[[test]]
name = "decorators_test"
harness = false

[[test]]
name = "utilities_test"
harness = false

[[test]]
name = "async_test"
harness = false
required-features = ["tokio"]

[[test]]
name = "parallel_test"
harness = false
required-features = ["parallel"]

