[package]
name = "rsspec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A Ginkgo/RSpec-inspired BDD testing framework for Rust."
readme = "../../README.md"

[features]
default = ["macros"]
# Proc-macro layer: describe!/it!/before_all! with implicit fixture params.
# Opt out with `default-features = false` to skip the syn build cost.
macros = ["dep:rsspec_macros"]
googletest = ["dep:googletest"]
tokio = ["dep:tokio"]
# Run distinct top-level describe/it/ordered subtrees on worker threads.
# Adds a `Send` bound to all test/hook closures (see MaybeSend in lib.rs).
parallel = []

[dependencies]
rsspec_macros = { version = "0.7.0", path = "../rsspec_macros", optional = true }
googletest = { version = "0.14", optional = true }
# `net` + `time` give the lazily-built suite runtime real IO/timer drivers
# (sqlx, axum, …) under `enable_all`; `sync` backs the async fixture tests.
tokio = { version = "1", features = ["rt", "net", "time", "sync"], optional = true }

[[test]]
name = "describe_test"
harness = false

[[test]]
name = "hooks_test"
harness = false

[[test]]
name = "decorators_test"
harness = false

[[test]]
name = "utilities_test"
harness = false

[[test]]
name = "async_test"
harness = false
required-features = ["tokio"]

[[test]]
name = "async_suite_runtime_test"
harness = false
required-features = ["tokio"]

[[test]]
name = "parallel_test"
harness = false
required-features = ["parallel"]

[[test]]
name = "macros_test"
required-features = ["macros"]

[[test]]
name = "macros_async_test"
harness = false
required-features = ["macros", "tokio"]

[[test]]
name = "seam_smoke"
required-features = ["macros"]
